# mogli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
include/: bronkerbosch.h  canonization.h  fcanonization.h  fragment.h  match.h  mcf.h  molecule.h  orbits.h  periodictable.h  product.h  subgraph_isomorphism.h  types.h
include/lad/: compatibility.c  domains.c  graph.c  lad.c  main  sublad.c  sublad.h
include/util/: packing.h
lib/dynamic_bitset/boost/config/: warning_disable.hpp  workaround.hpp
lib/dynamic_bitset/boost/config/compiler/: borland.hpp  codegear.hpp  cray.hpp  intel.hpp  sunpro_cc.hpp  visualc.hpp
lib/dynamic_bitset/boost/config/detail/: posix_features.hpp  suffix.hpp
lib/dynamic_bitset/boost/config/platform/: linux.hpp  vxworks.hpp
lib/dynamic_bitset/boost/config/stdlib/: dinkumware.hpp  libstdcpp3.hpp
lib/dynamic_bitset/boost/move/detail/: type_traits.hpp
lib/lad/: allDiff.c  sublad.c
script/: performance.py
src/: bronkerbosch.cpp  bronkerbosch.h  canonization.cpp  canonization.h  fcanonization.cpp  fcanonization.h  fragment.cpp  fragment.h  fragmentlist.cpp  fragmentlist.h  iacm.h  isomorphism.cpp  isomorphism.h  match.cpp  match.h  mcf.cpp  mcf.h  mogli.cpp  molecule.cpp  molecule.h  orbits.cpp  orbits.h  periodictable.h  product.cpp  product.h  subgraph_isomorphism.cpp  subgraph_isomorphism.h  types.h
src/util/: boosting.cpp  packing.h  pymogli.cpp
test/: report.cpp
tests/: discover_python_tests.py  report.cpp  test_fixtures.h  test_io.cpp  test_isomorphism.cpp  test_main.cpp  test_matching.cpp  test_packing.cpp  test_python.py
